Fix HTML validation issues

--- a/blog-details.html
+++ b/blog-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Future of Education: Embracing Change | Marceli Cieplik | UI/UX Designer</title>
+    <title>Future of Education - Embracing Change | Marceli Cieplik</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Explore insights on the future of education and how embracing change transforms learning experiences. Article by Marceli Cieplik.">
