--- a/blog.html
+++ b/blog.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="UTF-8" >
+        <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title>Blog | Marceli Cieplik | UI/UX Designer</title>
 
         <!-- SEO Meta Tags -->
         <meta
             name="description"
             content="Read articles and insights on UI/UX design, design systems, AI integration, and digital product design from Marceli Cieplik."
-        />
-        <meta name="keywords" content="design blog, UI/UX articles, design systems, AI design, design insights" />
-        <meta name="author" content="Marceli Cieplik" />
+        >
+        <meta name="keywords" content="design blog, UI/UX articles, design systems, AI design, design insights" >
+        <meta name="author" content="Marceli Cieplik" >
 
         <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://marceicieplik.com/blog.html" />
-        <meta property="og:title" content="Blog - Marceli Cieplik" />
+        <meta property="og:type" content="website" >
+        <meta property="og:url" content="https://marceicieplik.com/blog.html" >
+        <meta property="og:title" content="Blog - Marceli Cieplik" >
         <meta
             property="og:description"
             content="Articles and insights on UI/UX design, design systems, and AI integration."
-        />
-        <meta property="og:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
+        >
+        <meta property="og:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" >
 
         <!-- Twitter -->
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:url" content="https://marceicieplik.com/blog.html" />
-        <meta name="twitter:title" content="Blog - Marceli Cieplik" />
+        <meta name="twitter:card" content="summary" >
+        <meta name="twitter:url" content="https://marceicieplik.com/blog.html" >
+        <meta name="twitter:title" content="Blog - Marceli Cieplik" >
         <meta
             name="twitter:description"
             content="Articles and insights on UI/UX design, design systems, and AI integration."
-        />
-        <meta name="twitter:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
+        >
+        <meta name="twitter:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" >
 
 
         <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="preconnect" href="https://fonts.googleapis.com" >
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
         <link
             href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=Inter:wght@400;600&display=swap"
             rel="stylesheet"
-        />
+        >
 
         <!-- Unified Responsive Framework -->
-        <link rel="stylesheet" href="assets/css/framework-unified.css" />
+        <link rel="stylesheet" href="assets/css/framework-unified.css" >
     </head>
 <body data-theme="dark">
     <!-- Page Load Spinner -->
@@ -58,7 +58,7 @@
         <header class="site-header">
             <nav class="nav">
                 <a class="nav__logo" href="index.html" aria-label="Marceli Cieplik">
-                    <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" />
+                    <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" >
                 </a>
 
                 <button type="button" class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
@@ -79,10 +79,10 @@
                     <!-- THEME TOGGLE -->
                     <button class="theme-toggle" type="button" aria-label="Toggle color theme" title="Toggle theme">
                         <span class="theme-toggle__icon theme-toggle__icon--light">
-                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" />
+                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" >
                         </span>
                         <span class="theme-toggle__icon theme-toggle__icon--dark">
-                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" />
+                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" >
                         </span>
                     </button>
 
@@ -107,10 +107,10 @@
                         title="Toggle theme"
                     >
                         <span class="theme-toggle__icon theme-toggle__icon--light">
-                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" />
+                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" >
                         </span>
                         <span class="theme-toggle__icon theme-toggle__icon--dark">
-                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" />
+                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" >
                         </span>
                     </button>
 
@@ -143,7 +143,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=800&h=600&fit=crop"
                                 alt="Collaborative learning"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Collaborative Learning</h4>
                                 <p class="text-sm">Exploring the benefits of group-based education.</p>
@@ -161,7 +161,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?w=800&h=600&fit=crop"
                                 alt="Digital tools"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Digital Tools in Education</h4>
                                 <p class="text-sm">How technology enhances the learning experience.</p>
@@ -179,7 +179,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1509062522246-3755977927d7?w=800&h=600&fit=crop"
                                 alt="Student success"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Student Success Stories</h4>
                                 <p class="text-sm">Inspiring journeys of achievement and growth.</p>
@@ -197,7 +197,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1529390079861-591de354faf5?w=800&h=600&fit=crop"
                                 alt="Creative thinking"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Fostering Creativity</h4>
                                 <p class="text-sm">Building environments that encourage innovation.</p>
@@ -215,7 +215,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1497633762265-9d179a990aa6?w=800&h=600&fit=crop"
                                 alt="Reading culture"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Building Reading Culture</h4>
                                 <p class="text-sm">Strategies to develop lifelong reading habits.</p>
@@ -233,7 +233,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?w=800&h=600&fit=crop"
                                 alt="Science lab"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Hands-On Science</h4>
                                 <p class="text-sm">Experiential learning in laboratory settings.</p>
@@ -251,7 +251,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?w=800&h=600&fit=crop"
                                 alt="Outdoor education"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Outdoor Education</h4>
                                 <p class="text-sm">Learning beyond the classroom walls.</p>
@@ -269,7 +269,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?w=800&h=600&fit=crop"
                                 alt="Future skills"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Preparing for Tomorrow</h4>
                                 <p class="text-sm">Essential skills for the future workforce.</p>
@@ -287,7 +287,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1524178232363-1fb2b075b655?w=800&h=600&fit=crop"
                                 alt="Art education"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Art in Education</h4>
                                 <p class="text-sm">The role of arts in holistic development.</p>
@@ -305,7 +305,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1509062522246-3755977927d7?w=800&h=600&fit=crop"
                                 alt="Mathematics"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Making Math Fun</h4>
                                 <p class="text-sm">Innovative approaches to mathematics education.</p>
@@ -323,7 +323,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?w=800&h=600&fit=crop"
                                 alt="Language learning"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Language Learning</h4>
                                 <p class="text-sm">Effective methods for multilingual education.</p>
@@ -341,7 +341,7 @@
                                 loading="lazy"
                                 src="https://images.unsplash.com/photo-1529390079861-591de354faf5?w=800&h=600&fit=crop"
                                 alt="Physical education"
-                            />
+                            >
                             <div class="card__body">
                                 <h4>Physical Wellness</h4>
                                 <p class="text-sm">Integrating health and fitness into education.</p>
@@ -443,7 +443,7 @@
                                 class="footer__email-input"
                                 placeholder="Enter your email"
                                 aria-label="Email address"
-                            />
+                            >
                             <button type="button" class="footer__subscribe-btn" disabled>Subscribe</button>
                         </div>
                     </div>
