--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                     <div class="contact__info">
                         <h2>Our Office</h2>
                         <p>123 Education Lane, Learning City, LC 12345</p>
-                        <p>Phone: <a href="tel:+1234567890">+1 (234) 567‑890</a></p>
+                        <p>Phone: <a href="tel:+1234567890">+1&nbsp;(234)&nbsp;567‑890</a></p>
                         <p>Email: <a href="mailto:hello@marceicieplik.com">hello@marceicieplik.com</a></p>
                     </div>
                 </div>
