--- a/index.html
+++ b/index.html
@@ -121,33 +121,33 @@
             <div class="container">
                 <h1 class="display-1">18+ years of experience<br><span class="display-1__subline">crafting intuitive digital products</span></h1>
                 <div class="about__stats">
-                    <article class="about__stat-card" tabindex="0" role="button" aria-label="32 completed web sites">
-                        <div class="about__stat-content">
-                            <h3 class="about__stat-title">Web sites</h3>
+                    <button type="button" class="about__stat-card" aria-label="32 completed web sites">
+                        <span class="about__stat-content">
+                            <span class="about__stat-title">Web sites</span>
                             <span class="about__stat-count">×32</span>
-                        </div>
+                        </span>
                         <svg class="about__stat-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                             <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                    </article>
-                    <article class="about__stat-card" tabindex="0" role="button" aria-label="8 completed mobile apps">
-                        <div class="about__stat-content">
-                            <h3 class="about__stat-title">Mobile apps</h3>
+                    </button>
+                    <button type="button" class="about__stat-card" aria-label="8 completed mobile apps">
+                        <span class="about__stat-content">
+                            <span class="about__stat-title">Mobile apps</span>
                             <span class="about__stat-count">×8</span>
-                        </div>
+                        </span>
                         <svg class="about__stat-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                             <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                    </article>
-                    <article class="about__stat-card" tabindex="0" role="button" aria-label="Design systems">
-                        <div class="about__stat-content">
-                            <h3 class="about__stat-title">Design systems</h3>
+                    </button>
+                    <button type="button" class="about__stat-card" aria-label="Design systems">
+                        <span class="about__stat-content">
+                            <span class="about__stat-title">Design systems</span>
                             <span class="about__stat-count">×12</span>
-                        </div>
+                        </span>
                         <svg class="about__stat-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                             <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                    </article>
+                    </button>
                 </div>
 
                 <p>18+ years of experience crafting intuitive digital products for global brands. Expert in building scalable design systems and translating complex user needs into elegant, data‑informed interfaces. Proactively integrating AI tools—LLMs, agentic workflows, process automation and generative media—into the design workflow to super‑charge creativity and efficiency. Proven track record of leading high‑performing design teams and delivering products that drive tangible business growth across FinTech, Travel &amp; Hospitality, Banking &amp; Finance, Gaming &amp; Betting, Esports, EdTech, E‑Commerce, and Community Platforms.</p>
