--- a/solutions.html
+++ b/solutions.html
@@ -123,7 +123,7 @@
                     <div class="col-12 col-lg-4 col-xxxl-3">
                         <article class="card card--glass-outline">
                             <div class="card__body">
-                                <h4>Design Leadership & Strategy</h4>
+                                <h4>Design Leadership &amp; Strategy</h4>
                                 <p>Product vision and strategy development. Design team leadership, mentorship programs, and scalable design processes that align with business objectives.</p>
                             </div>
                         </article>
@@ -131,7 +131,7 @@
                     <div class="col-12 col-lg-4 col-xxxl-3">
                         <article class="card card--glass-outline">
                             <div class="card__body">
-                                <h4>User Research & Testing</h4>
+                                <h4>User Research &amp; Testing</h4>
                                 <p>Comprehensive user research, usability testing, and data-driven insights to inform design decisions and optimize user experiences.</p>
                             </div>
                         </article>
@@ -147,7 +147,7 @@
                     <div class="col-12 col-lg-4 col-xxxl-3">
                         <article class="card card--glass-outline">
                             <div class="card__body">
-                                <h4>AI Integration & Automation</h4>
+                                <h4>AI Integration &amp; Automation</h4>
                                 <p>Proactive integration of AI tools—LLMs, agentic workflows, process automation, and generative media—into design workflows to supercharge creativity and efficiency.</p>
                             </div>
                         </article>
@@ -155,7 +155,7 @@
                     <div class="col-12 col-lg-4 col-xxxl-3">
                         <article class="card card--glass-outline">
                             <div class="card__body">
-                                <h4>Brand Identity & Visual Design</h4>
+                                <h4>Brand Identity &amp; Visual Design</h4>
                                 <p>Complete brand identity development, visual design systems, and brand refresh projects that boost awareness and engagement.</p>
                             </div>
                         </article>
@@ -163,7 +163,7 @@
                     <div class="col-12 col-lg-4 col-xxxl-3">
                         <article class="card card--glass-outline">
                             <div class="card__body">
-                                <h4>Prototyping & Interaction Design</h4>
+                                <h4>Prototyping &amp; Interaction Design</h4>
                                 <p>Interactive prototypes, user flow design, and interaction patterns that create intuitive and engaging digital experiences.</p>
                             </div>
                         </article>
@@ -175,7 +175,7 @@
                     <p>We architect and deliver comprehensive design systems for web, iOS, and Android platforms. Our design systems achieve 100% WCAG AAA compliance and streamline development workflows through integrated tools like Sketch libraries, Zeplin, and Storybook.</p>
 
                     <h3 class="mt-6">Industries We Serve</h3>
-                    <p>Proven track record across multiple industries including FinTech, Travel & Hospitality, Banking & Finance, Gaming & Betting, Esports, EdTech, E-Commerce, and Community Platforms.</p>
+                    <p>Proven track record across multiple industries including FinTech, Travel &amp; Hospitality, Banking &amp; Finance, Gaming &amp; Betting, Esports, EdTech, E-Commerce, and Community Platforms.</p>
                 </div>
 
                 <div class="mt-8">
