--- a/typography-demo.html
+++ b/typography-demo.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="UTF-8" >
+        <meta name="viewport" content="width=device-width, initial-scale=1" >
         <title>Typography System Demo | Marceli Cieplik | UI/UX Designer</title>
 
         <!-- SEO Meta Tags -->
         <meta
             name="description"
             content="Demonstration of the fluid typography system with responsive scaling, display styles, and comprehensive typography utilities."
-        />
-        <meta name="keywords" content="typography, fluid typography, responsive text, CSS typography, design system" />
-        <meta name="author" content="Marceli Cieplik" />
+        >
+        <meta name="keywords" content="typography, fluid typography, responsive text, CSS typography, design system" >
+        <meta name="author" content="Marceli Cieplik" >
 
         <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://marceicieplik.com/typography-demo.html" />
-        <meta property="og:title" content="Typography System Demo - Fluid Typography" />
+        <meta property="og:type" content="website" >
+        <meta property="og:url" content="https://marceicieplik.com/typography-demo.html" >
+        <meta property="og:title" content="Typography System Demo - Fluid Typography" >
         <meta
             property="og:description"
             content="Demonstration of the fluid typography system with responsive scaling and comprehensive utilities."
-        />
-        <meta property="og:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
+        >
+        <meta property="og:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" >
 
         <!-- Twitter -->
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:url" content="https://marceicieplik.com/typography-demo.html" />
-        <meta name="twitter:title" content="Typography System Demo - Fluid Typography" />
+        <meta name="twitter:card" content="summary" >
+        <meta name="twitter:url" content="https://marceicieplik.com/typography-demo.html" >
+        <meta name="twitter:title" content="Typography System Demo - Fluid Typography" >
         <meta
             name="twitter:description"
             content="Demonstration of the fluid typography system with responsive scaling and comprehensive utilities."
-        />
-        <meta name="twitter:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
+        >
+        <meta name="twitter:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" >
 
         <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="preconnect" href="https://fonts.googleapis.com" >
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
         <link
             href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=Inter:wght@400;600&display=swap"
             rel="stylesheet"
-        />
+        >
 
         <!-- Unified Responsive Framework -->
-        <link rel="stylesheet" href="assets/css/framework-unified.css" />
+        <link rel="stylesheet" href="assets/css/framework-unified.css" >
         <!-- Typography System -->
-        <link rel="stylesheet" href="assets/css/typography-system.css" />
+        <link rel="stylesheet" href="assets/css/typography-system.css" >
 
         <style>
             /* Demo-specific styles */
@@ -95,10 +95,10 @@
         <header class="site-header">
             <nav class="nav">
                 <a class="nav__logo" href="index.html" aria-label="Marceli Cieplik">
-                    <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" />
+                    <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" >
                 </a>
 
-                <button class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
+                <button class="nav__burger" type="button" aria-label="Toggle menu" aria-expanded="false">
                     <span class="nav__burger-line"></span>
                     <span class="nav__burger-line"></span>
                     <span class="nav__burger-line"></span>
@@ -116,10 +116,10 @@
                     <!-- THEME TOGGLE -->
                     <button class="theme-toggle" type="button" aria-label="Toggle color theme" title="Toggle theme">
                         <span class="theme-toggle__icon theme-toggle__icon--light">
-                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" />
+                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" >
                         </span>
                         <span class="theme-toggle__icon theme-toggle__icon--dark">
-                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" />
+                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" >
                         </span>
                     </button>
 
@@ -144,10 +144,10 @@
                         title="Toggle theme"
                     >
                         <span class="theme-toggle__icon theme-toggle__icon--light">
-                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" />
+                            <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24" >
                         </span>
                         <span class="theme-toggle__icon theme-toggle__icon--dark">
-                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" />
+                            <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24" >
                         </span>
                     </button>
 
@@ -305,7 +305,7 @@
 
                 <!-- Code -->
                 <section class="demo-section">
-                    <h2>Code & Pre-formatted Text</h2>
+                    <h2>Code &amp; Pre-formatted Text</h2>
 
                     <div class="demo-item">
                         <div class="demo-label">Inline Code</div>
@@ -445,7 +445,7 @@ console.log(message);</code></pre>
                             <img
                                 src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=800&h=400&fit=crop"
                                 alt="Sample image"
-                            />
+                            >
                             <figcaption>
                                 This is an image caption using the figcaption element. It's styled with smaller, muted
                                 text.
@@ -457,7 +457,7 @@ console.log(message);</code></pre>
                         <img
                             src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=800&h=400&fit=crop"
                             alt="Sample image"
-                        />
+                        >
                         <p class="caption">
                             This is a caption using the .caption class. It works the same way as figcaption.
                         </p>
